# low_power_blinky

./: CMakeLists.txt  priv_deicke_A.pem  priv_deicke_B.pem  priv_deicke_C.pem  prj.conf  pub_deicke_A.pem  pub_deicke_B.pem  pub_deicke_C.pem
boards/: nrf52840dk_nrf52840.overlay
child_image/: hci_rpmsg.conf  mcuboot.conf
src/: dbg_config.h  hw_config.h  main.c  power_management.c  power_management.h
